Added Email Address

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 									
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href=mailto:divyajain@divya2405.com" target="_top">Email</a>
+										<a href=mailto:divyajain@divya2405.com" target="_top">Email : divyajain@divya2405.com</a>
 									</li>
 								</ul>
 							</div>
