--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="singel_right">
 			     <div class="col-md-8">
 				      <div class="contact-form">
-				  	        <form method="post" action="mailto:divyajain2405@gmail.com">
+				  	        <form method="POST" action="http://formspree.io/divyajain2405@gmail.com">
 					    	    <p class="comment-form-author"><label for="author">Your Name:</label>
 					    	    	<input type="text" class="textbox" value="Enter your name here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your name here...';}">
 						    	</p>
