changing parameters for formspree

--- a/index.html
+++ b/index.html
@@ -382,13 +382,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				      <div class="contact-form">
 				  	        <form method="POST" action="http://formspree.io/divyajain2405@gmail.com">
 					    	    <p class="comment-form-author"><label for="author">Your Name:</label>
-					    	    	<input type="text" class="textbox" value="Enter your name here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your name here...';}">
+					    	    	<input type="text" name="name" class="textbox" value="Enter your name here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Enter your name here...';}">
 						    	</p>
 						        <p class="comment-form-author"><label for="author">Email:</label>
-						     	   <input type="text" class="textbox" value="Enter your email here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
+						     	   <input type="email" name="_replyto" class="textbox" value="Enter your email here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
 						        </p>
 						        <p class="comment-form-author"><label for="author">Message:</label>
-						    	  <textarea value="Enter your message here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Enter your message here...</textarea>
+						    	  <textarea name="message" value="Enter your message here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Enter your message here...</textarea>
 						        </p>
 						        <input name="submit" type="submit" id="submit" value="Submit">
 					        </form>
