still trying with formspree

--- a/index.html
+++ b/index.html
@@ -387,9 +387,11 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						        <p class="comment-form-author"><label for="author">Email:</label>
 						     	   <input type="email" name="_replyto" class="textbox" value="Enter your email here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
 						        </p>
+								<input type="hidden" name="_subject" value="Website contact" />
 						        <p class="comment-form-author"><label for="author">Message:</label>
 						    	  <textarea name="message" value="Enter your message here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Enter your message here...</textarea>
 						        </p>
+								
 						        <input name="submit" type="submit" id="submit" value="Submit">
 					        </form>
 				       </div>
