finally working form

--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						     	   <input type="email" name="_replyto" class="textbox" value="Enter your email here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Email';}">
 						        </p>
 								<input type="hidden" name="_subject" value="Website contact" />
+								<input type="hidden" name="_next" value="#" />
 						        <p class="comment-form-author"><label for="author">Message:</label>
 						    	  <textarea name="message" value="Enter your message here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Enter your message here...</textarea>
 						        </p>
