testing thank you form

--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 						        </p>
 								<input type="hidden" name="_subject" value="Website contact" />
 								<input type="hidden" name="_next" value="#" />
-								<input type="hidden" name="_next" value="//divya-web.com/thanks.html" />
+								<input type="hidden" name="_next" value="thanks.html" />
 						        <p class="comment-form-author"><label for="author">Message:</label>
 						    	  <textarea name="message" value="Enter your message here..." onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Message';}">Enter your message here...</textarea>
 						        </p>
