--- a/index.html
+++ b/index.html
@@ -186,14 +186,26 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class='category-title'>EXPERIENCE</div>
         <div class='item'>
           <h2 class='item-company-title'>Bank Of America</h2>
-          <span class='item-personal-title'>Technology Development Intern</span>
-          <div class='item-date'>Jun 2015 - Aug 2015</div>
+          <span class='item-personal-title'>Technology Associate</span>
+          <div class='item-date'>Feb 2016 - Present</div>
           <p class='item-company-details'>
-            Create Business Process Management application as a utility to ensure automated check in of code.
+            Develop foreclosure application from Pega 6 to Pega 7
           </p>
           <ul class='item-personal-details'>
-            <li>Focused on Pega System tools, particularly Java & Db</li>
+            <li>Focused on developing in Pega System tools, particularly Java & Db</li>
             <li>Hands on experience with Agile Software Methodology</li>
+          </ul>
+        </div>
+		<div class='item'>
+          <h2 class='item-company-title'>America for Animals</h2>
+          <span class='item-personal-title'>Volunteer - Android Developer</span>
+          <div class='item-date'>March 2016 - Present</div>
+          <p class='item-company-details'>
+            Create Humane Eating Project Android Application, focused to make eating responsibly easier.
+          </p>
+          <ul class='item-personal-details'>
+            <li>Focused on using Google Api's , Integrating flurry for Android Analytics</li>
+            <li>Focused on integrating Javascript with Native android for a hybrid app</li>
           </ul>
         </div>
         <div class='item'>
