Added new code for website

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 									<ul>
 										<li><a class="scroll" href="#home">Home</a></li>
 										<li><a class="scroll" href="#about">About</a></li>
-										<li><a class="scroll" href="#services">Resume</a></li>
 										<li><a class="scroll" href="#port">Portfolio</a></li>
+										<li><a class="scroll" href="#services">Resume</a></li>										
 										<li><a href="https://androidwithdivya.wordpress.com/" target="_blank">Blog</a></li>
 										<li><a class="scroll" href="#contact">Contact</a></li>
 										<div class="clear"> </div>
@@ -103,7 +103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					<img src="images/pic1.png" class="img-responsive" alt=""/>
 					<h1>Divya Jain</h1>
 					<br>
-					<p><b>Love to design and develop software applications, specially mobile & web :)</b></p>
+					<p><b>Love to create useful Android Applications!</b></p>
 					<ul>
 						<li><a href="https://www.linkedin.com/in/divyajain2405" target="_blank">Hire Me</a></li>
 						<li><a href="#contact">Contact Me</a></li>
@@ -135,12 +135,13 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- about-grids -->
 				<div>
 					<div class="about-grids">	
-						<p>Hi, I am Divya. I am a software developer, originally from Delhi, India. In December 2015, I graduated from North Carolina State University with an M.S in Computer Science. Before that, I worked as a Senior Mobile Developer for Samsung Research India for more than 2 years, where I developed mobile applications for Samsung Os - Tizen from scratch. Thats when I realized that I had a passion for developing user friendly and highly effective applications to solve complex problems. I am currently looking for a position where I can explore such problems and come up with critical and creative solutions. 
-						</p>
-						<p>While my forte is in Android, I am a quick learner & am proud of my ability to adapt swiftly to languages or frameworks best suited for solving a particular problem. This is demonstrated by project examples like I developed & deployed a Ruby on Rails based library system in 2 weeks without any prior knowledge, else I developed my first Tizen application in Samsung within a few days of joining.I love to learn new concepts and understanding how they can be used to fit the bigger picture of solving a problem.
-						</p>
-						<p>When I am not coding, I am generally in the world of thrill and romance through reading various novels or singing on top of my lungs. I love meeting new people and talking. Recently, I have found an affinity for cooking, specially Indian food :) My aim is to write applications and softwares which the user can efficiently interact with and ensure a great user experience! I am available for freelance work too, so if you have any idea which needs a shape, pitch in and do not hesitate to contact me.
-						</p>
+						<p><b>Hi, I am a coding enthusiast, originally from Delhi, India. I worked as a Senior Mobile Developer for Samsung Research India for more than 2 years, where I developed native mobile applications for Samsung Os - Tizen. Thats when I realized I want to create user friendly applications to solve problems and make living easier.  
+						</b></p>
+						<p><b>Currently I design and develop Android apps and learning Android every single day. I am <a href="https://developers.google.com/training/certification/associate-android-developer/" target="_blank">Google Certified Associate Android Developer</a>, have small apps currently available in Google play store and actively working with America for Animals for their app <a href="https://play.google.com/store/apps/details?id=org.hep.afa&hl=en" target="_blank">Humane Eating Project"</a> as one of the two developers.
+						I also write an <a href="https://androidwithdivya.wordpress.com/" target="_blank">Android blog</a> demonstrating solutions to android challenges that anyone might face when learning or working on Android.
+						</b></p>
+						<p><b>When I am not coding, I am generally in the world of thrill and romance through reading various novels or singing on top of my lungs (Checkout my <a href="https://www.youtube.com/channel/UCX2CzP_4TfK4bXKvqXfHrEg?view_as=subscriber" target="_blank">youtube channel</a> :)). I love meeting new people and talking. Recently, I have found an affinity for cooking, specially Indian food :) My aim is to write applications and software which any user can efficiently interact with and ensure a great user experience! I am always up for developing new apps, so if you have any idea which needs a shape, pitch in and do not hesitate to contact me.
+						</b></p>
 					</div>
 				</div>
 				<!-- about-grids -->
@@ -173,6 +174,95 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				</script>								  
 			<!----//fea-video---->
 		<!-- services -->
+		<div id="port" class="blog">
+			<div class="container">
+				<!-- head-section -->
+				<div class="head-section text-center">
+					<h2>My Portfolio</h2>
+					<span> </span>
+				</div>
+				<!-- /head-section -->
+				<!-- blog-articals -->
+				<div class="blog-articals">
+					<div class="blog-artical">
+						<div class="blog-artical-pic">
+							<a href="single.html"><img src="images/LetsReadThemAll.png" title="booklist" /></a>
+						</div>
+							<div class="blog-artical-info">
+							<h3>Let's Read Them All!</h3>
+							<span>Android App to create book playlist and encourage reading more books!</a></span>
+							<p>Heard of a book recommendation from someone or saw a book you think you like at a bookstore, make a note of it in the app & create a book play list by searching for book names and adding them to your list of books you are dying to read. Once read, swipe them of your list and feel good!</p>
+							<a class="more-btn" href="https://play.google.com/store/apps/details?id=com.divya.readthemall" target="_blank">See More</a>
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="blog-artical">
+						<div class="blog-artical-pic">
+							<img src="images/port-3.jpg" title="Ring-Message" />
+						</div>
+						<div class="blog-artical-info">
+							<h3>Ring-Message</h3>
+							<span>Android app to assure you don't miss out on anything to ask or tell!</span>
+							<p>Sometimes it happens that one forgets some stuff when talking to someone! Ring-Message lets you save messages for anyone and next time when you call the person or the person calls you, a popup appears on the screen reminding you with the message. Developed with Android Studio, Sqlite Database, Call service</p>
+							<a class="more-btn" href="https://play.google.com/store/apps/details?id=myapp.prashant.ring_message&hl=en" target="_blank">See More</a>
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="blog-artical">
+						<div class="blog-artical-pic">
+							<img src="images/tictactoe.png" title="MyTicTacToe" />
+						</div>
+						<div class="blog-artical-info">
+							<h3><a href="#">Tic Tac Toe Game</a></h3>
+							<span>Android App to play the simple game of Tic Tac Toe!</span>
+							<p>Play a fun game of Tic Tac Toe by getting 3 X or O in a row, column or diagonal!</p>
+							<a class="more-btn" href="https://play.google.com/store/apps/details?id=com.my.divya.tictactoeapp" target="_blank">See More</a>
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="blog-artical">
+						<div class="blog-artical-pic">
+							<img src="images/hep.png" title="hep" />
+						</div>
+						<div class="blog-artical-info">
+							<h3>Humane Eating Project</h3>
+							<span>Android App to raise awareness about Humane way of eating, and providing for Animal cause.</span>
+							<p>Find Vegan, Vegetarian Friendly and Humane Restaurants near you and enhance your awareness about Humane ways of eating.</p>
+							<a class="more-btn" href="https://play.google.com/store/apps/details?id=org.hep.afa&hl=en" target="_blank">See More</a>
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="blog-artical move-top1">
+						<div class="blog-artical-pic">
+							<a href="single.html"><img src="images/port-5.jpg" title="HackDuke" /></a>
+						</div>
+						<div class="blog-artical-info">
+							<h3>QuickFill</h3>
+							<span>Android app with Google Cloud Messaging</span>
+							<p>With the aim of making hospital visits easy and at ease for patients, developed this app at Duke Hackathon 2015 in 12 hours. Used Google Cloud Messaging to let the client (patients) save their information one time and with the click of a button, send this information to the server (doctor) which prevents the need to fill the same information again and again</p>
+							<a class="more-btn" href="http://devpost.com/software/quickfill" target="_blank">See More</a>
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="blog-artical">
+						<div class="blog-artical-pic">
+							<a href="single.html"><img src="images/port-2.jpeg" title="Mozilla" /></a>
+						</div>
+						<div class="blog-artical-info">
+							<h3>Mozilla Servo Open Source Project</h3>
+							<span>Refactor GLES2 implementation for Non android platforms</a></span>
+							<p>Servo is Mozilla's web browser layout engine. It is being ported on Android by Samsung. I contributed to this open source project by refactoring one of the backend implementations to support it for Linux (non android) platforms. This implementation renders graphics on the browser & mainly uses RUST language.</p>
+							<a class="more-btn" href="http://wiki.expertiza.ncsu.edu/index.php/CSC/ECE_517_Fall_2015/M1506-Refactor-GLES2-Implementation#Project_Description" target="_blank">See More</a>
+							<div class="clearfix"> </div>
+						</div>
+					</div>
+					<div class="clearfix"> </div>
+				</div>
+				
+				<!-- blog-articals -->
+				<p class="more-articals text-center">Check Out My <a href="https://androidwithdivya.wordpress.com/" target="_blank">Android Blog</a> And Subscribe To Get All The Updates</p>
+			</div>
+		</div>
 		<div id="services" class="services">
 			<!-- head-section -->
 				<div class="head-section service-head text-center">
@@ -184,36 +274,37 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<section class='category experience'>
 		<div class="content"
         <div class='category-title'>EXPERIENCE</div>
+		<div class='item'>
+          <h2 class='item-company-title'>America for Animals</h2>
+          <span class='item-personal-title'>Android Developer - Volunteer</span>
+          <div class='item-date'>March 2016 - Present</div>
+          <p class='item-company-details'>
+            Created Humane Eating Project Android Application, focused to make eating responsibly easier.
+          </p>
+          <ul class='item-personal-details'>
+            <li>Google Api's, Yelp Reviews, social media integration, live news feed, Integrating flurry for Android Analytics</li>
+            <li>Increased downloads from 50 to 2000+</li>
+          </ul>
+        </div>
         <div class='item'>
           <h2 class='item-company-title'>Bank Of America</h2>
           <span class='item-personal-title'>Technology Associate</span>
           <div class='item-date'>Feb 2016 - Present</div>
           <p class='item-company-details'>
-            Develop foreclosure application from Pega 6 to Pega 7
+            Developing Business Process Management Applications in Java on Pega Cloud for Default workflow related processes.
           </p>
           <ul class='item-personal-details'>
-            <li>Focused on developing in Pega System tools, particularly Java & Db</li>
+            <li>Java</li>
             <li>Hands on experience with Agile Software Methodology</li>
           </ul>
         </div>
-		<div class='item'>
-          <h2 class='item-company-title'>America for Animals</h2>
-          <span class='item-personal-title'>Volunteer - Android Developer</span>
-          <div class='item-date'>March 2016 - Present</div>
-          <p class='item-company-details'>
-            Create Humane Eating Project Android Application, focused to make eating responsibly easier.
-          </p>
-          <ul class='item-personal-details'>
-            <li>Focused on using Google Api's , Integrating flurry for Android Analytics</li>
-            <li>Focused on integrating Javascript with Native android for a hybrid app</li>
-          </ul>
-        </div>
+		
         <div class='item'>
           <h2 class='item-company-title'>Samsung Research India</h2>
           <span class='item-personal-title'>Senior Software Engineer</span>
           <div class='item-date'>Apr 2012 - July 2014</div>
           <p class='item-company-details'>
-            Develop open source mobile applications for Samsung Os - Tizen<br> Shealth, Email, Contacts, Music player, Calendar			
+            Develop open source native mobile applications for Samsung Os - Tizen<br> Shealth, Email, Contacts, Music player, Calendar			
           </p>
           <ul class='item-personal-details'>
             <li>Focused on writing readable, reusable code for front end as well as backend</li>
@@ -270,7 +361,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
           <span class='item-personal-title'>MS-Computer Science</span>
           <div class='item-date'>Aug 2014 - Dec 2015</div>
             <ul class='item-personal-details'>
-            <li>Focus on Algorithms, Data Structures, Database Management, Object Oriented Design & DevOps</li>
+            <li>Focus on Mobile development, Algorithms, Data Structures, Database Management, Object Oriented Design & DevOps</li>
             <li>Grading Teaching Assistant, Algorithms</li>
           </ul>
         </div>
@@ -292,95 +383,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<!-- portfolio -->
 		
 		<!-- blog -->
-		<div id="port" class="blog">
-			<div class="container">
-				<!-- head-section -->
-				<div class="head-section text-center">
-					<h2>My Portfolio</h2>
-					<span> </span>
-				</div>
-				<!-- /head-section -->
-				<!-- blog-articals -->
-				<div class="blog-articals">
-					<div class="blog-artical">
-						<div class="blog-artical-pic">
-							<a href="single.html"><img src="images/port-2.jpeg" title="Mozilla" /></a>
-						</div>
-						<div class="blog-artical-info">
-							<h3>Mozilla Servo Open Source Project</h3>
-							<span>Refactor GLES2 implementation for Non android platforms</a></span>
-							<p>Servo is Mozilla's web browser layout engine. It is being ported on Android by Samsung. I contributed to this open source project by refactoring one of the backend implementations to support it for Linux (non android) platforms. This implementation renders graphics on the browser & mainly uses RUST language.</p>
-							<a class="more-btn" href="http://wiki.expertiza.ncsu.edu/index.php/CSC/ECE_517_Fall_2015/M1506-Refactor-GLES2-Implementation#Project_Description" target="_blank">See More</a>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="blog-artical">
-						<div class="blog-artical-pic">
-							<img src="images/port-1.jpg" title="skrap it" />
-						</div>
-						<div class="blog-artical-info">
-							<h3><a href="#">Skrap it</a></h3>
-							<span>Website Design & Development</span>
-							<p>Skrap it is an upcoming startup initiative by a group of young entrepreneurs to recycle trash and make second hand goods industry organized. I designed their website and also in the process of developing an Android app for the same. Soon to be available! </p>
-							<a class="more-btn" href="#">See More</a>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="blog-artical">
-						<div class="blog-artical-pic">
-							<img src="images/port-3.jpg" title="Ring-Message" />
-						</div>
-						<div class="blog-artical-info">
-							<h3>Ring-Message</h3>
-							<span>Android app on Google Play Store</span>
-							<p>Sometimes it happens that one forgets some stuff when talking to someone! Ring-Message lets you save messages for anyone and next time when you call the person or the person calls you, a popup appears on the screen reminding you with the message. Developed with Android Studio, Sqlite Database, Call service</p>
-							<a class="more-btn" href="https://play.google.com/store/apps/details?id=myapp.prashant.ring_message&hl=en" target="_blank">See More</a>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="blog-artical">
-						<div class="blog-artical-pic">
-							<img src="images/port-4.jpg" title="DevOps" />
-						</div>
-						<div class="blog-artical-info">
-							<h3>DevOps Pipeline</h3>
-							<span>Incremental Continuous Delivery Pipeline</span>
-							<p>The pipeline comprises of Build, Test & Analysis, Deployment & Pheonix Server components.Worked on AWS, Jenkins, Mocha framework, Istanbul Analysis tool, Redis & Git.</p>
-							<a class="more-btn" href="https://www.youtube.com/watch?v=TDUEHU6qZTA" target="_blank">See More</a>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="blog-artical move-top1">
-						<div class="blog-artical-pic">
-							<a href="single.html"><img src="images/port-5.jpg" title="HackDuke" /></a>
-						</div>
-						<div class="blog-artical-info">
-							<h3>QuickFill</h3>
-							<span>Android app with Google Cloud Messaging</span>
-							<p>With the aim of making hospital visits easy and at ease for patients, developed this app at Duke Hackathon 2015 in 12 hours. Used Google Cloud Messaging to let the client (patients) save their information one time and with the click of a button, send this information to the server (doctor) which prevents the need to fill the same information again and again</p>
-							<a class="more-btn" href="http://devpost.com/software/quickfill" target="_blank">See More</a>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="blog-artical top-mid">
-						<div class="blog-artical-pic">
-							<a href="single.html"><img src="images/port-6.jpg" title="Ruby on Rails" /></a>
-						</div>
-						<div class="blog-artical-info">
-							<h3>Library Web Application</h3>
-							<span>Ruby on Rails project</span>
-							<p>This application has features like preconfigured admin which can create/view new admins, manage books & manage library members; it lets you become a library member, borrow books & return and view history.Developed following the MVC architecture</p>
-							<a class="more-btn" href="https://expertiza.ncsu.edu/submitted_content/29416/edit" target="_blank">See More</a>
-							<div class="clearfix"> </div>
-						</div>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				
-				<!-- blog-articals -->
-				<p class="more-articals text-center">Check Out My <a href="https://androidwithdivya.wordpress.com/" target="_blank">Android Blog</a> And Subscribe To Get All The Updates</p>
-			</div>
-		</div>
+		
 		<!-- /blog -->
 		<!-- projects -->
 		<div id="contact" class="projects">
