Added code for fixin the image error

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<div class="blog-articals">
 					<div class="blog-artical">
 						<div class="blog-artical-pic">
-							<a href="single.html"><img src="images/LetsReadThemAll.png" title="booklist" /></a>
+							<a href="single.html"><img src="images/LetsReadThemAll.jpg" title="booklist" /></a>
 						</div>
 							<div class="blog-artical-info">
 							<h3>Let's Read Them All!</h3>
@@ -210,7 +210,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="blog-artical">
 						<div class="blog-artical-pic">
-							<img src="images/tictactoe.png" title="MyTicTacToe" />
+							<img src="images/tictactoe.jpg" title="MyTicTacToe" />
 						</div>
 						<div class="blog-artical-info">
 							<h3><a href="#">Tic Tac Toe Game</a></h3>
@@ -222,7 +222,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 					</div>
 					<div class="blog-artical">
 						<div class="blog-artical-pic">
-							<img src="images/hep.png" title="hep" />
+							<img src="images/hep.jpg" title="hep" />
 						</div>
 						<div class="blog-artical-info">
 							<h3>Humane Eating Project</h3>
