--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         </div>
         <div class='item'>
           <h2 class='item-company-title'>Bank Of America</h2>
-          <span class='item-personal-title'>Technology Associate</span>
+          <span class='item-personal-title'>Application Developer</span>
           <div class='item-date'>Feb 2016 - Present</div>
           <p class='item-company-details'>
             Developing Business Process Management Applications in Java on Pega Cloud for Default workflow related processes.
@@ -301,10 +301,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		
         <div class='item'>
           <h2 class='item-company-title'>Samsung Research India</h2>
-          <span class='item-personal-title'>Senior Software Engineer</span>
+          <span class='item-personal-title'>Senior Mobile App Developer</span>
           <div class='item-date'>Apr 2012 - July 2014</div>
           <p class='item-company-details'>
-            Develop open source native mobile applications for Samsung Os - Tizen<br> Shealth, Email, Contacts, Music player, Calendar			
+            Develop open source native mobile applications for Samsung Os - Tizen<br> Shealth, Email, Contacts, Music player, Calendar, Lock Screen			
           </p>
           <ul class='item-personal-details'>
             <li>Focused on writing readable, reusable code for front end as well as backend</li>
